# pyboost

./: .gitignore  CMakeLists.txt  LICENSE  Pipfile  README.md  requirements.txt  setup.py
include/pyboost/: allocator.h  exception_translators.h  exceptions.h  gil_lock.h  hash_object.h  string.h
pysrc/pyboost/: __init__.py
pysrc/pyboost/circular_buffer/: __init__.py
pysrc/pyboost/crc/: __init__.py
pysrc/pyboost/dynamic_bitset/: __init__.py
pysrc/pyboost/multiprecision/: __init__.py
src/: CMakeLists.txt  pyboost.cpp
src/circular_buffer/: CMakeLists.txt  circular_buffer.cpp
src/crc/: CMakeLists.txt  crc.cpp
src/dynamic_bitset/: CMakeLists.txt  dynamic_bitset.cpp
src/multiprecision/: CMakeLists.txt  multiprecision.cpp
test/circular_buffer/: test_circular_buffer.py
test/dynamic_bitset/: test_dynamic_bitset.py
test/multiprecision/: test_checked_integers.py
